target/classes/META-INF/fabric8/openshift/task-api-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    discovery.3scale.net/discovery-version: v1
    discovery.3scale.net/description-path: /openapi.json
    discovery.3scale.net/scheme: http
    discovery.3scale.net/port: "8080"
    fabric8.io/iconUrl: img/icons/camel.svg
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    discovery.3scale.net: "true"
    app: task-api
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: io.example
  name: task-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: task-api
    provider: fabric8
    group: io.example
